test/expected/explain_siwt.out
explain signed wchar_t x
        ^
9: error: "signed wchar_t" is illegal for built-in type
